css: Fix last commit overflow should not apply to inner-editors

--- a/src/static/css/pad/layout.css
+++ b/src/static/css/pad/layout.css
@@ -1,9 +1,11 @@
 html, body {
   width: 100%;
   height: 100%;
-  overflow: hidden;
   margin: 0;
   padding: 0;
+}
+html:not(.inner-editor), html:not(.inner-editor) body {
+  overflow: hidden;
 }
 body {
   display: flex;
